Shortened BiBTeX keywords

--- a/content/publication/2002-slp/cite.bib
+++ b/content/publication/2002-slp/cite.bib
@@ -5,7 +5,7 @@
  groups = {Edited},
  issn = {1057-7122},
  journal = {IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
- keywords = {network topology;network routing;workstation clusters;multiprocessor interconnection networks;block shift networks;interconnection networks;workstation clusters;node degree flexibility;generalized topology;VLSI implementation;slowdown factors;routing;MIN;Network topology;Multiprocessor interconnection networks;Sun;Local area networks;Very large scale integration;Routing;Hypercubes;Computer science;Workstations;Parallel processing},
+ keywords = {network topology;network routing;Parallel processing},
  month = {April},
  number = {4},
  pages = {543--546},
