--- a/content/publication/2010-dylb/cite.bib
+++ b/content/publication/2010-dylb/cite.bib
@@ -5,7 +5,7 @@
  booktitle = {2010 IEEE International Conference on Bioinformatics and Biomedicine Workshops (BIBMW)},
  doi = {10.1109/BIBMW.2010.5703859},
  groups = {Edited},
- keywords = {bioinformatics;iterative methods;molecular biophysics;parallel processing;sampling methods;accelerating iterative algorithms;CUDA;conditional random fields training algorithm;biological sequence alignment;gradient ascent based CRF training method;Gibbs sampling;parallel algorithm;Graphics processing unit;Training;Algorithm design and analysis;Hidden Markov models;Heuristic algorithms;Biology;Acceleration;Conditional Random Fields;Biological Sequence Alignment;GPGPU},
+ keywords = {bioinformatics;iterative methods;molecular biophysics;parallel processing;sampling methods;accelerating iterative algorithms;CUDA;GPGPU},
  pages = {543--548},
  publisher = {IEEE Computer Society},
  title = {On accelerating iterative algorithms with CUDA: A case study on Conditional Random Fields training algorithm for biological sequence alignment},
