--- a/content/publication/2011-kbbb/cite.bib
+++ b/content/publication/2011-kbbb/cite.bib
@@ -1,12 +1,12 @@
 @inbook{2011-KBBB,
- abstract = {Centrality analysis deals with the identification of critical vertices and edges in real-world graph abstractions. Graph-theoretic centrality heuristics such as betweenness and closeness are widely used in application domains ranging from social network analysis to systems biology. In this chapter, we discuss several new results related to large-scale graph analysis using centrality indices. We present the first parallel algorithms and efficient implementations for evaluating these compute-intensive metrics. Our parallel algorithms are optimized for real-world networks, and they exploit topological properties such as the low graph diameter and unbalanced degree distributions. We evaluate centrality indices for several large-scale networks such as web crawls, protein-interaction networks (PINs), movie-actor networks, and patent citation networks that are three orders of magnitude larger than instances that can be processed by current social network analysis packages. As an application to systems biology, we present the novel case study of betweenness centrality analysis applied to eukaryotic PINs. We make an important observation that proteins with high betweenness centrality, but low degree, are abundant in the human and yeast PINs.},
+ abstract = {Graphs are a general approach for representing information that spans the widest possible range of computing applications. They are particularly important to computational biology, web search, and knowledge discovery. As the sizes of graphs increase, the need to apply advanced mathematical and computational techniques to solve these problems is growing dramatically. Examining the mathematical and computational foundations of the analysis of large graphs generally leads to more questions than answers. This book concludes with a discussion of some of these questions.},
  address = {Philadelphia, PA},
- author = {Jeremy Kepner and David A. Bader and Robert Bond and Nadya Bliss},
+ author = {Jeremy Kepner and David A. Bader and Robert Bond and Nadya Bliss and Christos Faloutsos and Bruce Hendrickson and John Gilbert and Eric Robinson Read More: https://epubs-siam-org.libdb.njit.edu:8443/doi/abs/10.1137/1.9780898719918.ch16},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/books/siam/11/KG2011},
  booktitle = {Graph Algorithms in the Language of Linear Algebra},
  chapter = {16},
- doi = {10.1137/1.9780898719918},
+ doi = {10.1137/1.9780898719918.ch16},
  editor = {Jeremy Kepner and John R. Gilbert},
  groups = {Edited},
  isbn = {978-0-89871-990-1},
@@ -14,8 +14,8 @@
  publisher = {SIAM},
  series = {Software, environments, tools},
  timestamp = {Tue, 02 Jul 2019 08:09:44 +0200},
- title = {Large-Scale Network Analysis},
- url = {https://doi.org/10.1137/1.9780898719918},
+ title = {Fundamental Questions in the Analysis of Large Graphs Read More: https://epubs-siam-org.libdb.njit.edu:8443/doi/abs/10.1137/1.9780898719918.ch16},
+ url = {https://doi.org/10.1137/1.9780898719918.ch16},
  volume = {22},
  year = {2011}
 }
