--- a/content/publication/2011-ktsb/cite.bib
+++ b/content/publication/2011-ktsb/cite.bib
@@ -4,7 +4,7 @@
  doi = {10.1371/journal.pone.0022483},
  groups = {Edited},
  journal = {PLOS ONE},
- month = {08},
+ month = {August},
  number = {8},
  pages = {1--12},
  publisher = {Public Library of Science},
