Added 2008 pdf of papers

--- a/content/publication/2008-badc/cite.bib
+++ b/content/publication/2008-badc/cite.bib
@@ -3,14 +3,13 @@
  address = {Berlin},
  author = {Bader, David A.},
  booktitle = {International Conference on Parallel Processing and Applied Mathematics},
- chapter = {Petascale Computing for Large-Scale Graph Problems},
+ title = {Petascale Computing for Large-Scale Graph Problems},
  doi = {10.1007/978-3-540-68111-3_18},
  editor = {Wyrzykowski, Roman and Dongarra, Jack and Karczewski, Konrad and Wasniewski, Jerzy},
  groups = {Edited},
  isbn = {978-3-540-68111-3},
  pages = {166--169},
  publisher = {Springer},
- title = {Parallel Processing and Applied Mathematics},
  url = {https://doi.org/10.1007/978-3-540-68111-3_18},
  year = {2008}
 }
