--- a/content/publication/2006-abk/cite.bib
+++ b/content/publication/2006-abk/cite.bib
@@ -11,7 +11,7 @@
  pages = {225},
  publisher = {ACM},
  timestamp = {Tue, 06 Nov 2018 16:59:29 +0100},
- title = {M11 - High-performance computing methods for computational genomics},
+ title = {High-performance computing methods for computational genomics},
  url = {https://doi.org/10.1145/1188455.1188689},
  year = {2006}
 }
