--- a/content/publication/2011-kbbb/cite.bib
+++ b/content/publication/2011-kbbb/cite.bib
@@ -14,7 +14,7 @@
  publisher = {SIAM},
  series = {Software, environments, tools},
  timestamp = {Tue, 02 Jul 2019 08:09:44 +0200},
- title = {Fundamental Questions in the Analysis of Large Graphs Read More: https://epubs-siam-org.libdb.njit.edu:8443/doi/abs/10.1137/1.9780898719918.ch16},
+ title = {Fundamental Questions in the Analysis of Large Graphs},
  url = {https://doi.org/10.1137/1.9780898719918.ch16},
  volume = {22},
  year = {2011}
