--- a/content/publication/1999-bj/cite.bib
+++ b/content/publication/1999-bj/cite.bib
@@ -5,7 +5,7 @@
  biburl = {https://dblp.org/rec/bib/journals/jpdc/BaderJ99},
  doi = {10.1006/jpdc.1999.1541},
  groups = {Edited},
- journal = {Journal of Parallel and Dis- tributed Computing},
+ journal = {Journal of Parallel and Distributed Computing},
  number = {1},
  pages = {92--108},
  timestamp = {Fri, 26 May 2017 01:00:00 +0200},
