Removed % from pubs

--- a/content/publication/2001-bimw/cite.bib
+++ b/content/publication/2001-bimw/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{2001-BIMW,
- abstract = {The ability to provide uniform shared-memory access to a significant number of processors in a single SMP node brings us much closer to the ideal PRAM parallel computer. In this paper, we develop new techniques for designing a uniform shared-memory algorithm from a PRAM algorithm and present the results of an extensive experimental study demonstrating that the resulting programs scale nearly linearly across a significant range of processors (from 1 to 64) and across the entire range of instance sizes tested. This linear speedup with the number of processors is, to our knowledge, the first ever attained in practice for intricate combinatorial problems. The example we present in detail here is a graph decomposition algorithm that also requires the computation of a spanning tree; this problem is not only of interest in its own right, but is representative of a large class of irregular combinatorial problems that have simple and efficient sequential implementations and fast PRAM algorithms, but have no known efficient parallel implementations. Our results thus offer promise for bridging the gap between the theory and practice of shared-memory parallel algorithms. nt[mis|Supported in part by NSF CAREER 00-93039, NSF ITR 00-81404, NSF DEB 99-10123, and DOE CSRI-14968},
+ abstract = {The ability to provide uniform shared-memory access to a significant number of processors in a single SMP node brings us much closer to the ideal PRAM parallel computer. In this paper, we develop new techniques for designing a uniform shared-memory algorithm from a PRAM algorithm and present the results of an extensive experimental study demonstrating that the resulting programs scale nearly linearly across a significant range of processors (from 1 to 64) and across the entire range of instance sizes tested. This linear speedup with the number of processors is, to our knowledge, the first ever attained in practice for intricate combinatorial problems. The example we present in detail here is a graph decomposition algorithm that also requires the computation of a spanning tree; this problem is not only of interest in its own right, but is representative of a large class of irregular combinatorial problems that have simple and efficient sequential implementations and fast PRAM algorithms, but have no known efficient parallel implementations. Our results thus offer promise for bridging the gap between the theory and practice of shared-memory parallel algorithms. Supported in part by NSF CAREER 00-93039, NSF ITR 00-81404, NSF DEB 99-10123, and DOE CSRI-14968},
  address = {Berlin},
  author = {David A. Bader and Ajith K. Illendula and Bernard M. E. Moret and Nina R. Weisse-Bernstein},
  bibsource = {dblp computer science bibliography, https://dblp.org},
@@ -8,7 +8,6 @@
  doi = {10.1007/3-540-44688-5_11},
  editor = {Gerth Stølting and Brodal and Daniele Frigioni and Alberto Marchetti-Spaccamela},
  groups = {Edited},
- note = {15 papers accepted out of 25 papers submitted: 60% acceptance rate},
  pages = {129--144},
  publisher = {Springer},
  timestamp = {Tue, 14 May 2019 10:00:51 +0200},
