--- a/content/publication/2005-bm/cite.bib
+++ b/content/publication/2005-bm/cite.bib
@@ -8,7 +8,7 @@
  doi = {10.1007%2F11602569_48},
  editor = {David A. Bader and Manish Parashar and Varadarajan Sridhar and Viktor K. Prasanna},
  groups = {Edited},
- note = {50 papers accepted out of 362 papers submit- ted: 13.8% acceptance rate. HiPC Most Impactful Papers Award, at HiPC 25th Silver Jubilee.},
+ note = {HiPC Most Impactful Papers Award, at HiPC 25th Silver Jubilee},
  pages = {465--476},
  publisher = {Berlin},
  timestamp = {Tue, 14 May 2019 10:00:50 +0200},
