--- a/content/publication/2014-m-ba/cite.bib
+++ b/content/publication/2014-m-ba/cite.bib
@@ -7,7 +7,7 @@
  booktitle = {International Conference for High Performance Computing, Networking, Storage and Analysis, SC 2014, New Orleans, LA, USA, November 16-21, 2014},
  doi = {10.1109/SC.2014.52},
  groups = {Edited},
- note = {Best Student Paper Finalist. (82 papers accepted out of 394 papers submitted: 20.8% acceptance rate)},
+ note = {Best Student Paper Finalist},
  pages = {572--583},
  publisher = {IEEE Computer Society},
  timestamp = {Mon, 21 Aug 2017 16:43:27 +0200},
