--- a/content/publication/2009-abda/cite.bib
+++ b/content/publication/2009-abda/cite.bib
@@ -1,8 +1,8 @@
 @inproceedings{2009-ABD+a,
- author = {V. Agarwal and David A. Bader and L. Dan and L.-K. Liu and D. Pasetto and M. Perrone and F. Petrini},
+ author = {Virat Agarwal and David A. Bader and Lin Dan and Lurng-Kuo Liu and Davide Pasetto and Michael Perrone and Fabrizio Petrini},
  booktitle = {24th International Supercomputing Conference (ISC), Hamburg, Germany, June 23-26, 2009},
  groups = {Edited},
- note = {Best Paper Award - 24 papers accepted out of 54 papers submitted: 44.4% acceptance rate},
+ note = {Best Paper Award},
  title = {Faster FAST: Multicore Acceleration of Streaming Financial Data},
  year = {2009}
 }
