Added talk updated pubs with Summary

--- a/content/publication/2005-wbmy/cite.bib
+++ b/content/publication/2005-wbmy/cite.bib
@@ -1,5 +1,5 @@
 @inbook{2005-WBMY,
- abstract = {Summary This chapter contains sections titled: Introduction Maximum Parsimony Exact MP: Parallel Branch and Bound MP Heuristics: Disk-Covering Methods Summary and Open Problems References},
+ abstract = {This chapter contains sections titled: Introduction Maximum Parsimony Exact MP: Parallel Branch and Bound MP Heuristics: Disk-Covering Methods Summary and Open Problems References},
  address = {Hoboken, NJ},
  author = {Williams, Tiffani L. and Bader, David A. and Moret, Bernard M. E. and Yan, Mi},
  booktitle = {Parallel Computing for Bioinformatics and Computational Biology},
