Added HPEC 2019 paper

--- a/content/publication/2019-xab/cite.bib
+++ b/content/publication/2019-xab/cite.bib
@@ -3,6 +3,7 @@
  booktitle = {The 23rd Annual IEEE High Performance Extreme Computing Conference (HPEC), Waltham, MA, September 24-26, 2019},
  groups = {Edited},
  title = {Skip the Intersection: Quickly Counting Common Neighbors on Shared-Memory Systems},
- year = {2019}
+ year = {2019},
+ abstract = {Counting common neighbors between all vertex pairs in a graph is a fundamental operation, with uses in similarity measures, link prediction, graph compression, community detection, and more. Current shared-memory approaches either rely on set intersections or are not readily parallelizable. We introduce a new efficient and parallelizable algorithm to count common neighbors: starting at a wedge endpoint, we iterate through all wedges in the graph, and increment the common neighbor count for each endpoint pair. This exactly counts the common neighbors between all pairs without using set intersections, and as such attains an asymptotic improvement in runtime. Furthermore, our algorithm is simple to implement and only slight modifications are required for existing implementations to use our results. We provide an OpenMP implementation and evaluate it on real-world and synthetic graphs, demonstrating no loss of scalability and an asymptotic improvement. We show intersections are neither necessary nor helpful for computing all pairs common neighbor counts.}
 }
 
