--- a/content/publication/2011-kbbb/cite.bib
+++ b/content/publication/2011-kbbb/cite.bib
@@ -1,7 +1,7 @@
 @inbook{2011-KBBB,
  abstract = {Graphs are a general approach for representing information that spans the widest possible range of computing applications. They are particularly important to computational biology, web search, and knowledge discovery. As the sizes of graphs increase, the need to apply advanced mathematical and computational techniques to solve these problems is growing dramatically. Examining the mathematical and computational foundations of the analysis of large graphs generally leads to more questions than answers. This book concludes with a discussion of some of these questions.},
  address = {Philadelphia, PA},
- author = {Jeremy Kepner and David A. Bader and Robert Bond and Nadya Bliss and Christos Faloutsos and Bruce Hendrickson and John Gilbert and Eric Robinson Read More: https://epubs-siam-org.libdb.njit.edu:8443/doi/abs/10.1137/1.9780898719918.ch16},
+ author = {Jeremy Kepner and David A. Bader and Robert Bond and Nadya Bliss and Christos Faloutsos and Bruce Hendrickson and John Gilbert and Eric Robinson},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/books/siam/11/KG2011},
  booktitle = {Graph Algorithms in the Language of Linear Algebra},
