--- a/content/publication/2019-xab/cite.bib
+++ b/content/publication/2019-xab/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{2019-XAB,
- author = {Xiaojing An, Kasimir Gabert, James Fox, Oded Green, and David A. Bader},
+ author = {Xiaojing An and Kasimir Gabert and James Fox and Oded Green and David A. Bader},
  booktitle = {The 23rd Annual IEEE High Performance Extreme Computing Conference (HPEC), Waltham, MA, September 24-26, 2019},
  groups = {Edited},
  title = {Skip the Intersection: Quickly Counting Common Neighbors on Shared-Memory Systems},
