--- a/content/publication/2008-badc/cite.bib
+++ b/content/publication/2008-badc/cite.bib
@@ -1,7 +1,7 @@
 @inproceedings{2008-Badc,
  abstract = {Graph theoretic problems are representative of fundamental kernels in traditional and emerging computational sciences such as chemistry, biology, and medicine, as well as applications in national security. Yet they pose serious challenges for parallel machines due to non-contiguous, concurrent accesses to global data structures with low degrees of locality. Few parallel graph algorithms outperform their best sequential implementation due to long memory latencies and high synchronization costs. In this talk, we consider several graph theoretic kernels for connectivity and centrality and discuss how the features of petascale architectures will affect algorithm development, ease of programming, performance, and scalability.},
  address = {Berlin},
- author = {Bader, David A.},
+ author = {David A. Bader},
  booktitle = {International Conference on Parallel Processing and Applied Mathematics},
  title = {Petascale Computing for Large-Scale Graph Problems},
  doi = {10.1007/978-3-540-68111-3_18},
