--- a/content/publication/2012-saa/cite.bib
+++ b/content/publication/2012-saa/cite.bib
@@ -7,7 +7,7 @@ We present here the first implementation of RNA secondary structure prediction b
 
 Conclusions:
 GTfold supports advances in RNA structural biology by reducing the timescales for secondary structure prediction. The difference will be particularly valuable to researchers working with lengthy RNA sequences, such as RNA viral genomes.},
- author = {M Shel Swenson and Joshua Anderson and Andrew Ash and Prashant Gaurav and Zsuzsanna Sükösd and David A Bader and Stephen C Harvey and Christine E Heitsch},
+ author = {M. Shel Swenson and Joshua Anderson and Andrew Ash and Prashant Gaurav and Zsuzsanna Sükösd and David A. Bader and Stephen C. Harvey and Christine E. Heitsch},
  doi = {10.1186/1756-0500-5-341},
  groups = {Edited},
  journal = {BMC Research Notes},
