Updated publication 2019-gfyb

--- a/content/publication/2019-gfyb/cite.bib
+++ b/content/publication/2019-gfyb/cite.bib
@@ -1,7 +1,7 @@
 @inproceedings{2019-GFYB,
  author = {Oded Green and James Fox and Jeff Young and David Bader},
  booktitle = {9th IEEE/ACM Workshop on Irregular Applications: Architectures and Algorithms, IA3@SC 2019, Denver, CO, USA, November 18, 2019},
- doi = {},
+ doi = {10.1109/IA349570.2019.00016},
  pages = {},
  title = {Performance Impact of Memory Channels on Sparse and Irregular Algorithms},
  url = {},
