--- a/content/publication/2020-gkskb/cite.bib
+++ b/content/publication/2020-gkskb/cite.bib
@@ -7,5 +7,5 @@
   pages     = {1119--1133},
   year      = {2020},
   url       = {https://www.vldb.org/pvldb/vol13.html},
-  doi       = {},
+  doi       = {10.14778/3384345.3384358},
 }
