--- a/content/publication/2020-rrdoba/cite.bib
+++ b/content/publication/2020-rrdoba/cite.bib
@@ -1,9 +1,17 @@
-@conference{2020-RRDOBA,
-  author    = {Bartley Richardson and Bradley Rees and Tom Drabas and Even Oldridge and David A. Bader and Rachel Allen},
-  title     = {Accelerating and Expanding End-to-End Data Science Workflows with {DL/ML} Interoperability Using {RAPIDS}},
-  booktitle = {{ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining ({KDD})},
-  month     = aug,
-  year      = {2020},
-  url       = {},
-  doi       = {},
+@inproceedings{2020-RRDOBA,
+author = {Richardson, Bartley and Rees, Bradley and Drabas, Tom and Oldridge, Even and Bader, David A. and Allen, Rachel},
+title = {Accelerating and Expanding End-to-End Data Science Workflows with {DL/ML} Interoperability Using {RAPIDS}},
+year = {2020},
+isbn = {9781450379984},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3394486.3406702},
+doi = {10.1145/3394486.3406702},
+abstract = {The lines between data science (DS), machine learning (ML), deep learning (DL), and data mining continue to be blurred and removed. This is great as it ushers in vast amounts of capabilities, but it brings increased complexity and a vast number of tools/techniques. It's not uncommon for DL engineers to use one set of tools for data extraction/cleaning and then pivot to another library for training their models. After training and inference, it's common to then move data yet again by another set of tools for post-processing. The RAPIDS suite of open source libraries not only provides a method to execute and accelerate these tasks using GPUs with familiar APIs, but it also provides interoperability with the broader open source community and DL tools while removing unnecessary serializations that slow down workflows. GPUs provide massive parallelization that DL has leveraged for some time, and RAPIDS provides the missing pieces that extend this computing power to more traditional yet important DS and ML tasks (e.g., ETL, modeling). Complete pipelines can be built that encompass everything, including ETL, feature engineering, ML/DL modeling, inference, and visualization, all while removing typical serialization costs and affording seamless interoperability between libraries. All experiments using RAPIDS can effortlessly be scheduled, logged and reviewed using existing public cloud options. Join our engineers and data scientists as they walk through a collection of DS and ML/DL engineering problems that show how RAPIDS running on Azure ML can be used for end-to-end, entirely GPU pipelines. This tutorial includes specifics on how to use RAPIDS for feature engineering, interoperability with common ML/DL packages, and creating GPU native visualizations using cuxfilter. The use cases presented here give attendees a hands-on approach to using RAPIDS components as part of a larger workflow, seamlessly integrating with other libraries (e.g., TensorFlow) and visualization packages.},
+booktitle = {Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining},
+pages = {3503–3504},
+numpages = {2},
+keywords = {gpu acceleration, machine learning, data science, deep learning, pydata ecosystem},
+location = {Virtual Event, CA, USA},
+series = {KDD '20}
 }
