Added HPEC2020 paper updates

--- a/content/publication/2020-dzbh/cite.bib
+++ b/content/publication/2020-dzbh/cite.bib
@@ -2,23 +2,10 @@
  author = {Zhihui Du and Sen Zhang and David A. Bader and Jingkun Hu},
  booktitle = {The 24th Annual IEEE High Performance Extreme Computing Conference (HPEC), Waltham, MA, September 22-24, 2020},
  groups = {Edited},
- title = {A 2-Approximation Algorithm for QoS-Aware and Fault-Tolerant Replica Placement},
+ title = {An Efficient {LP} Rounding Scheme for Replica Placement},
  year = {2020},
- url       = {},
- doi       = {},
- abstract = {As emerging applications become more and more
-distributed and decentralized, how to design and build a faulttolerant
-network system with high Quality of Service (QoS)
-guarantee has become a challenging problem. In this paper,
-we formulate an unique optimal replica placement problem in
-terms of minimizing the replica placement cost subject to both
-QoS and fault-tolerant constraints at the same time. Based
-on the generalized graph model, we prove that the optimal
-replica placement problem is NP-hard. To solve the problem, our
-proposed a novel heuristic based greedy solution that comprises
-of two interesting rounding algorithms that are applied in tandem
-on the results preprocessed by a relaxed linear programming
-component. We further prove our the proposed greedy algorithm
-actually is a 2-approximate algorithm.}
+ url       = {https://ieeexplore.ieee.org/document/9286163},
+ doi={10.1109/HPEC43674.2020.9286163},
+ abstract = {Large fault-tolerant network systems with high Quality of Service (QoS) guarantee are critical in many real world applications and entail diverse replica placement problems. In this paper, the replica placement problem in terms of minimizing the replica placement cost subject to both QoS and fault-tolerant constraints is formulated as a binary integer linear programming problem first and then relaxed as a linear programming problem. Given the optimal fractional linear programming solution, we propose a two-step rounding algorithm to obtain its integer solution. In the first step, a half rounding algorithm is used to simplify the problem. In the second step, a cheapest amortized cost rounding algorithm uses a novel metric, named amortized cost, to make locally optimal rounding decision for the remaining vertices independently. Furthermore, a conflict resolution algorithm is presented to tackle the situations when different vertices make conflicting rounding decisions. Finally, we prove that the proposed two-step rounding algorithm has a 2-approximation ratio when the additional conflict cost meets a given constraint.}
 }
 
