--- a/content/publication/2020-hbg/cite.bib
+++ b/content/publication/2020-hbg/cite.bib
@@ -4,8 +4,8 @@
  groups = {Edited},
  title = {Using RAPIDS AI to Accelerate Graph Data Science Workflows},
  year = {2020},
- url       = {},
- doi       = {},
+ url       = {https://ieeexplore.ieee.org/document/9286224},
+ doi={10.1109/HPEC43674.2020.9286224},
  abstract = {This Scale free networks are abundant in many natural,
 social, and engineering phenomena for which there exists a substantial
 corpus of theory able to elucidate many of their underlying
