--- a/content/publication/2020-mdsbww/cite.bib
+++ b/content/publication/2020-mdsbww/cite.bib
@@ -4,8 +4,8 @@
  groups = {Edited},
  title = {GPU Accelerated Anomaly Detection of Large Scale Light Curves},
  year = {2020},
- url       = {},
- doi       = {},
+ url       = {https://ieeexplore.ieee.org/document/9286242},
+ doi={10.1109/HPEC43674.2020.9286242},
  abstract = {Identifying anomalies in millions of stars in real time
 is a great challenge. In this paper, we develop a matched filtering
 based algorithm to detect a typical anomaly, microlensing. The
